feat : case1 구현